added landscape en toast message

--- a/Sa'ad Abdullah 2154528/app/src/main/res/values/strings.xml
+++ b/Sa'ad Abdullah 2154528/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Sierende Elementen</string>
+    <string name="beschrijving_string">Beschrhijving:  </string>
+    <string name="matriaal_string">Matriaal:  </string>
+    <string name="ondergrond_string">Ondergrond:  </string>
+    <string name="plaatsdatum_string">Plaatsings Datum:  </string>
+
+
+    <string name="kunstenaar_string">Kunstenaar:  </string>
 </resources>
